Various improvements, mostly variable naming convention

--- a/module/communication/file/internal/configuration/src/main/resources/module-communication-file-internal.properties
+++ b/module/communication/file/internal/configuration/src/main/resources/module-communication-file-internal.properties
@@ -1,5 +1,5 @@
 # Directory where data is persisted and shared across Promena nodes
 communication.file.internal.directory.path=/tmp
-communication.file.alfdata.mount.path=/var/alfresco
-communication.file.alfdata.alfresco.mount.path=/usr/local/tomcat/./alf_data
-communication.file.alfdata.mounted=false
+communication.file.source.file.volume.mount.path=/var/alfresco
+communication.file.source.file.volume.external.mount.path=/usr/local/tomcat/./alf_data
+communication.file.source.file.volume.mounted=false
